- Added Sizeable and SizeChangeListener interfaces
- Added GameResizeListener and removed onResize method from GameContainer
- Added MdxException for mini2Dx runtime exceptions
- Added WorldListener interface to listen for entity creation/deletion
- Added TextureRegion setFlip, setFlipX and setFlipY
- Added Graphics.setRotation
- Added getPixelWidth() and getPixelHeight() to TiledMap
- Positionable instances now have getId() method
- Improved pixel rounding and reduced interpolation for CollisionBox, CollisionCircle and CollisionPoint
- Mdx.json can now read/write to/from FileHandle instances
- Added @NonConcrete annotation for interface serialization in Mdx.xml and Mdx.json
- Added @ConstructorArg for constructor based serialization in Mdx.xml and Mdx.json
- Fixed inconsistencies in TextureRegion and NinePatch APIs
- Fixed Mdx.xml not deserializing maps correctly when values are objects
- Fixed Mdx.xml and Mdx.json not serializing/deserialzing super class fields
- Fixed Mdx.xml and Mdx.json not deserialzing enum fields correctly
- Fixed Animation flipping Sprites when rendering at a coordinate
- QuadTrees
  * Added QuadTree interface for all QuadTree implementations
  * Existing Quad class renamed to PointQuadTree
  * Added thread-safe versions of PointQuadTree and RegionQuadTree
  * QuadTrees now have a watermark for remerging empty quads
  * Performance improvements to QuadTree implementations

[1.2.1]
- (#39) Fixed Animation flipping Sprites by default

[1.2.0]
- Updated to libGDX 1.6.5 and roboVM 1.6.0
- (#28) Added artemis-odb integration
- (#34) Fixed input not being polled if multiple updates occur in one frame
- (#35) Added TextureRegion wrapper class
- Added mini2Dx-specific game launcher classes
- Added forceTo(x, y) method to CollisionPoint and CollisionCircle
- Fixed tile image and id calculation for tilesets with margin and/or spacing

[1.1.0]
- Updated to libGDX 1.6.4, roboVM 1.5.0 and reflections 0.9.10
- (#25) Added isometric Tiled map support