@@ -1,0 +1,12 @@
+/**
+ * Copyright 2016 Thomas Cashman
+ */
+package com.artemis.system;
+
+/**
+ *
+ */
+public interface InterpolatingSystem {
+
+	public void interpolateSystem();
+}
